--- a/HealthySettle/HealthySettle/MyGroup/SetTVCell.xib
+++ b/HealthySettle/HealthySettle/MyGroup/SetTVCell.xib
@@ -9,14 +9,14 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="63" id="KGk-i7-Jjw" customClass="SetTVCell">
-            <rect key="frame" x="0.0" y="0.0" width="452" height="63"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="129" id="KGk-i7-Jjw" customClass="SetTVCell">
+            <rect key="frame" x="0.0" y="0.0" width="452" height="129"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="452" height="62"/>
+                <rect key="frame" x="0.0" y="0.0" width="452" height="128"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fVX-OZ-AC3">
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fVX-OZ-AC3">
                         <rect key="frame" x="18" y="24" width="15" height="15"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="fVX-OZ-AC3" secondAttribute="height" multiplier="1:1" id="3no-X1-yaC"/>
@@ -29,14 +29,14 @@
                             </mask>
                         </variation>
                     </imageView>
-                    <imageView userInteractionEnabled="NO" alpha="0.59999999999999998" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="right_.png" translatesAutoresizingMaskIntoConstraints="NO" id="zlE-Nm-4LR">
+                    <imageView userInteractionEnabled="NO" alpha="0.20000000000000001" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="right_.png" translatesAutoresizingMaskIntoConstraints="NO" id="zlE-Nm-4LR">
                         <rect key="frame" x="428" y="23" width="8" height="16"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="zlE-Nm-4LR" secondAttribute="height" multiplier="1:2" id="T4g-dL-Czp"/>
                             <constraint firstAttribute="width" constant="8" id="UaF-Tz-yfT"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Fp-vt-fW4">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Fp-vt-fW4">
                         <rect key="frame" x="318" y="13" width="100" height="36"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="100" id="qFe-78-bgl"/>
@@ -45,7 +45,7 @@
                         <color key="textColor" red="0.58823529411764708" green="0.59215686274509804" blue="0.59607843137254901" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EFJ-jK-r6a">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EFJ-jK-r6a">
                         <rect key="frame" x="43" y="13" width="100" height="36"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="100" id="OLB-8G-DL5"/>
@@ -95,7 +95,7 @@
                 <outlet property="mark_View" destination="fVX-OZ-AC3" id="d04-hd-hpF"/>
                 <outlet property="mark_label" destination="EFJ-jK-r6a" id="0iA-OT-oww"/>
             </connections>
-            <point key="canvasLocation" x="120" y="222.5"/>
+            <point key="canvasLocation" x="120" y="255.5"/>
         </tableViewCell>
     </objects>
     <resources>
