--- a/HealthySettle/HealthySettle/HomeGroup/ExactSearchGroup/SearchVController.xib
+++ b/HealthySettle/HealthySettle/HomeGroup/ExactSearchGroup/SearchVController.xib
@@ -342,6 +342,7 @@
                 </view>
                 <imageView userInteractionEnabled="NO" alpha="0.84999999999999998" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="XKC-8s-Fzt">
                     <rect key="frame" x="0.0" y="0.0" width="375" height="164"/>
+                    <color key="backgroundColor" red="0.90196078430000004" green="0.043137254899999998" blue="0.094117647060000004" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="128" id="ehV-Yz-8pt"/>
                         <constraint firstAttribute="width" secondItem="XKC-8s-Fzt" secondAttribute="height" multiplier="4:1.75" id="uPH-iD-t3V"/>
@@ -353,16 +354,29 @@
                     </variation>
                 </imageView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8UR-rP-RgU">
-                    <rect key="frame" x="10" y="20" width="30" height="40"/>
+                    <rect key="frame" x="10" y="19" width="15" height="27"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="40" id="9K6-pk-4cE"/>
-                        <constraint firstAttribute="width" constant="30" id="QSI-Fv-u3c"/>
+                        <constraint firstAttribute="height" constant="18" id="9K6-pk-4cE"/>
+                        <constraint firstAttribute="width" secondItem="8UR-rP-RgU" secondAttribute="height" multiplier="5:9" id="Id4-py-Tto"/>
+                        <constraint firstAttribute="width" constant="15" id="QSI-Fv-u3c"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="27"/>
-                    <state key="normal" title=".">
+                    <state key="normal">
                         <color key="titleColor" red="0.96078431369999995" green="0.96078431369999995" blue="0.96078431369999995" alpha="1" colorSpace="calibratedRGB"/>
                     </state>
+                    <variation key="default">
+                        <mask key="constraints">
+                            <exclude reference="9K6-pk-4cE"/>
+                        </mask>
+                    </variation>
                 </button>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="n5X-ZJ-82i">
+                    <rect key="frame" x="0.0" y="667" width="375" height="49"/>
+                    <color key="backgroundColor" red="0.95294117647058818" green="0.95294117647058818" blue="0.95294117647058818" alpha="1" colorSpace="calibratedRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="49" id="NX5-AB-2Ot"/>
+                    </constraints>
+                </view>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jUm-LD-r6l">
                     <rect key="frame" x="137" y="40" width="100" height="40"/>
                     <constraints>
@@ -373,13 +387,6 @@
                     <color key="textColor" red="0.96078431369999995" green="0.96078431369999995" blue="0.96078431369999995" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="n5X-ZJ-82i">
-                    <rect key="frame" x="0.0" y="667" width="375" height="49"/>
-                    <color key="backgroundColor" red="0.95294117647058818" green="0.95294117647058818" blue="0.95294117647058818" alpha="1" colorSpace="calibratedRGB"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="49" id="NX5-AB-2Ot"/>
-                    </constraints>
-                </view>
             </subviews>
             <color key="backgroundColor" red="0.95294117647058818" green="0.95294117647058818" blue="0.95294117647058818" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
@@ -387,12 +394,12 @@
                 <constraint firstItem="89A-FV-QyU" firstAttribute="top" secondItem="3Rl-dL-oeu" secondAttribute="bottom" constant="1" id="69u-GV-W8L"/>
                 <constraint firstItem="89A-FV-QyU" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="8Fn-Jj-3f4"/>
                 <constraint firstItem="EKD-sd-Mgv" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="94h-6l-ncC"/>
-                <constraint firstItem="XKC-8s-Fzt" firstAttribute="top" secondItem="8UR-rP-RgU" secondAttribute="bottom" constant="-60" id="AHt-2w-5uh"/>
+                <constraint firstItem="XKC-8s-Fzt" firstAttribute="top" secondItem="8UR-rP-RgU" secondAttribute="bottom" constant="-46" id="AHt-2w-5uh"/>
                 <constraint firstAttribute="trailing" secondItem="XKC-8s-Fzt" secondAttribute="trailing" id="Am4-sh-qhD"/>
                 <constraint firstItem="3Rl-dL-oeu" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="CVU-AM-2RC"/>
                 <constraint firstItem="KbJ-D2-TOF" firstAttribute="top" secondItem="C9B-Ij-BhF" secondAttribute="bottom" constant="12" id="Dxy-xa-wLK"/>
                 <constraint firstItem="XKC-8s-Fzt" firstAttribute="top" secondItem="jUm-LD-r6l" secondAttribute="bottom" constant="-80" id="FkQ-ZY-TXM"/>
-                <constraint firstItem="XKC-8s-Fzt" firstAttribute="leading" secondItem="8UR-rP-RgU" secondAttribute="trailing" constant="-40" id="PZv-DL-l74"/>
+                <constraint firstItem="XKC-8s-Fzt" firstAttribute="leading" secondItem="8UR-rP-RgU" secondAttribute="trailing" constant="-25" id="PZv-DL-l74"/>
                 <constraint firstItem="d1n-8H-bAR" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="40" id="PhU-ZM-kNC"/>
                 <constraint firstItem="3Rl-dL-oeu" firstAttribute="top" secondItem="NDZ-zT-Cdx" secondAttribute="bottom" constant="1" id="QPE-gS-2xW"/>
                 <constraint firstItem="jUm-LD-r6l" firstAttribute="centerX" secondItem="XKC-8s-Fzt" secondAttribute="centerX" id="SDk-qN-OxF"/>
