--- a/HealthySettle/HealthySettle/HomeGroup/ExactSearchGroup/PensionSRTVCell.xib
+++ b/HealthySettle/HealthySettle/HomeGroup/ExactSearchGroup/PensionSRTVCell.xib
@@ -22,7 +22,7 @@
                             <constraint firstAttribute="height" constant="30" id="C6l-Bp-jt9"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                         <variation key="default">
                             <mask key="constraints">
